In XUL window, space for thumbnail is now fixed - thumbnail will be scaled down if too large and centered in the space if too small.

--- a/extension/content/browser.css
+++ b/extension/content/browser.css
@@ -69,8 +69,8 @@ image.new-results {
 }
 
 richlistbox.tp-study-list {
-    height: 500px;
-    width: 500px; 
+    height: 522px;
+    width: 502px; 
     overflow: auto;
     margin: 0px;
 }
@@ -103,6 +103,11 @@ richlistitem.tp-new-results {
     border-bottom-style: solid;
     border-width: 1px;
     background-color: pink;
+}
+
+vbox.results-thumbnail {
+    height: 120px;
+    width: 120px;
 }
 
 image.results-thumbnail {
